# Telemetry

./: README.md  build.gradle  settings.gradle
TelemetryCore/: .gitignore  CMakeLists.txt  TelemetryCore.cmake  build.gradle
TelemetryCore/src/main/: AndroidManifest.xml
TelemetryCore/src/main/cpp/Telemetry/: GroundRecorder.cpp  GroundRecorder.h  IDT.hpp  TelemetryReceiver.cpp  TelemetryReceiver.h  UDPReceiver.cpp  UDPReceiver.h  WFBBackwardsCompatibility.h  WFBTelemetryData.h
TelemetryCore/src/main/cpp/Telemetry/Helper/: FileReader.hpp  SettingsN.hpp  StringHelper.hpp  UDPSender.hpp
TelemetryCore/src/main/cpp/Telemetry/InputOutput/: GroundRecorderFPV.hpp  GroundRecorderRAW.hpp  UDPReceiver.cpp
TelemetryCore/src/main/cpp/Telemetry/Network/: UDPReceiver.cpp
TelemetryCore/src/main/cpp/Telemetry/WFBTelemetryData/: WFBBackwardsCompatibility.h  WFBTelemetryData.h
TelemetryCore/src/main/cpp/Telemetry/cFiles/: UAVTelemetryData.h  frsky.c  frsky.h  ltm.c  ltm.h  mavlink2.c  mavlink2.h  shared_c_objective.h  smartport.c  smartport.h
TelemetryCore/src/main/cpp/TelemetryReceiver/: TelemetryReceiver.cpp  TelemetryReceiver.h
TelemetryCore/src/main/cpp/cFiles/: frsky.c  ltm.h  mavlink2.c  mavlink2.h  smartport.c  smartport.h
TelemetryCore/src/main/cpp/parser_c/: mavlink2.c
TelemetryCore/src/main/java/constantin/telemetry/core/: ASettingsTelemetry.java  HomeLocation.java  RequestPermissionHelper.java  TelemetryReceiver.java  TelemetrySettings.java  TestReceiverTelemetry.java
TelemetryCore/src/main/res/values/: array.xml  pref_telemetry_ids.xml
TelemetryCore/src/main/res/xml/: pref_telemetry.xml
TelemetryExample/: build.gradle
TelemetryExample/src/androidTest/java/constantin/telemetry/example/: MainActivityTest.java
TelemetryExample/src/main/: AndroidManifest.xml
TelemetryExample/src/main/java/constantin/telemetry/example/: MainActivity.java
TelemetryExample/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
